# sundai

./: .gitignore  RAG.py  README.md  SETUP.md  api_server.py  app.yaml  database.py  deploy.sh  deploy_to_server.sh  feedback_storage.py  llm_client.py  main.py  mastadon.py  models.py  notion.py  notion_listener.py  pyproject.toml  requirements.txt  setup_server.sh  telegram_client.py  test_integration.py  topic_cycler.py
app/: main.py
app/api/: server.py
app/clients/: llm_client.py  mastadon.py  notion.py  telegram_client.py
app/database/: __init__.py
app/models/: schemas.py
app/services/: feedback_storage.py  notion_listener.py  rag.py  topic_cycler.py
app/utils/: paths.py
infra/: app.yaml
scripts/: deploy_to_server.sh  setup_server.sh
tests/: test_integration.py
